2023-09-05 Albert Chu <chu11@llnl.gov>

	* ipmi-sensors: Fix help output typo.

2023-09-05 MIYAZAKI Yasushi (on Savannah)

	* configure.ac: Add define definitions for `exp10', `exp2', `log2'
	to config.h.in.

	* configure.ac: Add define definition for `cbrt' in math library
	to config.h.in

	* configure.ac: 'inb' and `outb' may be defined as inline
	functions (ex. glibc 2.28 on debian buster (amd64)), so check with
	AC_CHECK_DECL instead of AC_CHECK_FUNCS . Due to `Fix build issue
	when inb/outb are not available on some systems' in 1.6.9 release,
	the previously working kcs driver was causing errors.

2023-09-05 Albert Chu <chu11@llnl.gov>

	* man/ipmi-oem.8.pre.in: Document support on Supermicro X9DRD.

2023-09-02 Albert Chu <chu11@llnl.gov>

	* man/Makefile.am: Fix make distcheck.

2023-09-02 Albert Chu <chu11@llnl.gov>

	* man/ipmi-config.8.pre.in: Add pointer to ipmi-config.conf(5)
	manpage so users know to look there.

2023-07-18 Albert Chu <chu11@llnl.gov>

	* common/portability/freeipmi-portability.h: Fix portability of
	cbrt() redefinition.  cube root is x^(1/3) not x^-3.

2023-06-22 Albert Chu <chu11@llnl.gov>

	* doc/freeipmi-bugs-and-workarounds.txt: Document issue with
	Vadatech VT811.

2023-06-07 Albert Chu <chu11@llnl.gov>

	* libfreeipmi/include: Add missing xilinx header to dist.

2023-06-05 Albert Chu <chu11@llnl.gov>

	* libipmimonitoring/ipmi_monitoring_sensor_reading.c
	(_get_sensor_units): Handle special case when sensor has units
	"RPM" and the units rate is "per minute".

2023-05-15 Albert Chu <chu11@llnl.gov>

	* doc, man: fix a number of typos

	* global: Fix various comment / doc typos.

	* contrib/pet/petalert.pl: Change output error message typo.

2023-05-12 Albert Chu <chu11@llnl.gov>

	* ipmiseld/ipmiseld-ipmi-communication.c (ipmiseld_ipmi_setup),
	ipmiseld/ipmiseld-cache.c (ipmiseld_sdr_cache_create_and_load):
	Set initialized pointers to NULL to avoid double free when
	_ipmiseld_poll() exits.
